--- a/Livrable1_TDVRP_Modélisation_v3.ipynb
+++ b/Livrable1_TDVRP_Modélisation_v3.ipynb
@@ -418,25 +418,18 @@
     "\n",
     "## 7. Références bibliographiques\n",
     "\n",
-    "ajouter celle de mael et louka\n",
-    "\n"
+    "- Analyse de la complexité :\n",
+    "https://fr.wikipedia.org/wiki/Analyse_de_la_complexit%C3%A9_des_algorithmes\n",
+    "\n",
+    "- Théorie des Graphes :\n",
+    "https://fr.wikipedia.org/wiki/Th%C3%A9orie_des_graphes\n",
+    "\n",
+    "- Problème du voyageur de commerce : \n",
+    "https://fr.wikipedia.org/wiki/Probl%C3%A8me_du_voyageur_de_commerce\n",
+    "\n",
+    "- P, NP et les classes : \n",
+    "https://www.geeksforgeeks.org/dsa/types-of-complexity-classes-p-np-conp-np-hard-and-np-complete\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e827f4d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c741158",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
