--- a/Livrable1_TDVRP_Modélisation_v3.ipynb
+++ b/Livrable1_TDVRP_Modélisation_v3.ipynb
@@ -407,7 +407,7 @@
     "- Proposé une **modélisation formelle et mathématique** du problème ;  \n",
     "- Étudié la **complexité théorique**, qui reste NP-difficile.\n",
     "\n",
-    "La prochaine étape consistera à concevoir et implémenter une **métaheuristique** adaptée (par exemple **Recuit Simulé**, **Tabu Search** ou **ALNS**) capable de traiter des instances de taille réaliste (> 1000 clients).\n"
+    "La prochaine étape consistera à concevoir et implémenter une **métaheuristique** adaptée (par exemple **Recuit Simulé**, **Tabu Search** ou **ALNS**) capable de traiter des instances de taille réaliste (supérieur à 1000 clients).\n"
    ]
   },
   {
