chore: rename 1 file and delete 1 file

--- a/Livrable2_TDVRP_Modélisation_v2.ipynb
+++ b/Livrable2_TDVRP_Modélisation_v2.ipynb
@@ -107,8 +107,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# -*- coding: utf-8 -*-\n",
-    "\n",
     "# --- Imports Nécessaires --- \n",
     "import openpyxl\n",
     "import pandas as pd\n",
@@ -566,23 +564,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a85b937e",
+   "metadata": {},
+   "source": [
+    "# 7. Conclusion et Perspectives\n",
+    "\n",
+    "Ce livrable établit la modélisation et la résolution d'un problème de tournées de véhicules dépendant du temps (TDVRP), au cœur des enjeux logistiques actuels et en réponse aux objectifs de l'ADEME pour une mobilité plus maîtrisée. Notre objectif n'était pas la simple minimisation de la distance, mais celle, plus complexe, du **makespan** (l'heure de retour du dernier véhicule), en intégrant les contraintes réelles d'une flotte thermique et d'un trafic dynamique.\n",
+    "\n",
+    "## 7.1. Le Choix du Recuit Simulé face aux Algorithmes \"Rapides\"\n",
+    "\n",
+    "Face à ce problème, il aurait été tentant d'opter pour un algorithme \"rapide\", telle qu'une heuristique gloutonne (ex: \"plus proche voisin\"). Si une telle méthode fournit une solution quasi instantanément, elle est structurellement limitée : elle se retrouve inévitablement \"piégée\" dans un **minimum local** – une solution qui *semble* bonne, mais qui est loin d'être optimale.\n",
+    "\n",
+    "Notre problème étant **NP-difficile**, trouver la solution optimale garantie est informatiquement impossible pour 1000 clients. Nous avons donc délibérément choisi le **Recuit Simulé (SA)**. Cette métaheuristique représente un compromis stratégique entre temps de calcul et qualité de la solution.\n",
+    "\n",
+    "La force du SA, et la raison de notre choix, est sa capacité à **échapper aux minimums locaux**. En s'autorisant, de manière contrôlée, à accepter temporairement des solutions dégradées (grâce au concept de \"température\"), l'algorithme explore une part bien plus vaste de l'espace de recherche. Il privilégie la **robustesse de la solution finale** à la vitesse d'exécution pure, ce qui est essentiel pour un problème logistique où chaque minute économisée sur le makespan a un impact opérationnel et écologique réel.\n",
+    "\n",
+    "## 7.2. Analyse et Pistes d'Amélioration\n",
+    "\n",
+    "Notre étude de stabilité, menée sur plusieurs lancements, a confirmé que le Recuit Simulé produit des solutions cohérentes et performantes. Les visualisations (boîtes à moustaches) montrent une distribution resserrée des coûts, indiquant que l'algorithme converge de manière fiable vers une bonne solution, malgré sa nature stochastique.\n",
+    "\n",
+    "Ce modèle, bien que fonctionnel, constitue une fondation sur laquelle nous pouvons bâtir. Plusieurs axes d'amélioration sont identifiés pour la suite du projet :\n",
+    "\n",
+    "1.  **Affinage des Hyperparamètres :** Les performances du SA (température, taux de refroidissement, itérations) ont été fixées pour cette étude. Une campagne de *tuning* plus poussée permettrait d'optimiser le rapport temps/qualité.\n",
+    "2.  **Opérateurs de Voisinage :** Nous utilisons des opérateurs de voisinage standards ('relocate', 'swap'). L'implémentation de mouvements plus complexes (ex: 2-opt, *cross-exchange*) pourrait permettre d'explorer l'espace de recherche de manière plus efficace et d'accélérer la convergence.\n",
+    "3.  **Enrichissement du Modèle (Objectif ADEME) :** La prochaine étape majeure est de complexifier le modèle pour refléter pleinement les ambitions de la mobilité multimodale. Cela inclut :\n",
+    "    * **Flotte Hétérogène :** Introduire différents types de véhicules (vélos-cargos, utilitaires légers).\n",
+    "    * **Véhicules Électriques (EVRP) :** Intégrer la gestion de l'autonomie et les contraintes de recharge, un défi majeur mais essentiel pour la décarbonation.\n",
+    "4.  **Modèle de Trafic Avancé :** Le trafic est actuellement modélisé par tranches fixes. Une évolution pourrait utiliser des modèles prédictifs basés sur des données historiques pour un calcul des temps de trajet encore plus réaliste.\n",
+    "\n",
+    "En conclusion, ce livrable valide une approche robuste pour un problème complexe. Nous disposons désormais d'un socle algorithmique solide, capable de gérer des contraintes non linéaires, et prêt à être étendu pour intégrer les défis de la mobilité intelligente et durable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6cb7d7c3",
    "metadata": {},
    "source": [
+    "# 7. Références bibliographiques\n",
     "\n",
-    "## 6. Références bibliographiques\n",
-    "\n",
-    "- Analyse de la complexité :\n",
-    "https-fr.wikipedia.org/wiki/Analyse_de_la_complexit%C3%A9_des_algorithmes\n",
-    "\n",
-    "- Théorie des Graphes :\n",
-    "https-fr.wikipedia.org/wiki/Th%C3%A9orie_des_graphes\n",
-    "\n",
-    "- Problème du voyageur de commerce : \n",
-    "https-fr.wikipedia.org/wiki/Probl%C3%A8me_du_voyageur_de_commerce\n",
-    "\n",
-    "- P, NP et les classes : \n",
-    "https-www.geeksforgeeks.org/dsa/types-of-complexity-classes-p-np-conp-np-hard-and-np-complete\n"
+    "  * [Analyse de la complexité](https://fr.wikipedia.org/wiki/Analyse_de_la_complexit%C3%A9_des_algorithmes)\n",
+    "  * [Théorie des Graphes](https://fr.wikipedia.org/wiki/Th%C3%A9orie_des_graphes)\n",
+    "  * [Problème du voyageur de commerce](https://fr.wikipedia.org/wiki/Probl%C3%A8me_du_voyageur_de_commerce)\n",
+    "  * [P, NP et les classes](https://www.google.com/search?q=https://www.geeksforgeeks.org/dsa/types-of-complexity-classes-p-np-conp-np-hard-and-np-complete)\n"
    ]
   }
  ],
