update 1 file and create 1 file

--- a/Livrable2_TDVRP_Modélisation_v3.ipynb
+++ b/Livrable2_TDVRP_Modélisation_v3.ipynb
@@ -397,7 +397,9 @@
       "  Lancement 1/10... Coût trouvé: 165.86\n",
       "  Lancement 2/10... Coût trouvé: 165.86\n",
       "  Lancement 3/10... Coût trouvé: 165.86\n",
-      "  Lancement 4/10... Coût trouvé: 165.86\n"
+      "  Lancement 4/10... Coût trouvé: 165.86\n",
+      "  Lancement 5/10... Coût trouvé: 165.86\n",
+      "  Lancement 6/10... Coût trouvé: 165.86\n"
      ]
     }
    ],
